[gd_scene load_steps=5 format=2]

[ext_resource path="res://prefabs/body_base/Body.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.714, 47.1215 )

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -120, -90.0274 ), Vector2( -120, -232 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Body" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MouseLeaveDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseLeaveDetector"]
position = Vector2( 0, -30.114 )
shape = SubResource( 2 )

[node name="Info" type="Panel" parent="."]
margin_left = -120.0
margin_top = -232.0
margin_right = 120.0
margin_bottom = -52.0
rect_pivot_offset = Vector2( 120, 90 )

[node name="PlanetName" type="Label" parent="Info"]
margin_left = 24.0
margin_top = 24.0
margin_right = 216.0
margin_bottom = 38.0
text = "Name: "

[node name="Population" type="Label" parent="Info"]
margin_left = 24.0
margin_top = 64.0
margin_right = 216.0
margin_bottom = 78.0
text = "Population: "

[node name="Resistance" type="Label" parent="Info"]
margin_left = 24.0
margin_top = 104.0
margin_right = 216.0
margin_bottom = 118.0
text = "Resistance: "

[node name="Raid" type="Button" parent="Info"]
margin_left = 64.0
margin_top = 144.0
margin_right = 176.0
margin_bottom = 164.0
text = "Raid"

[node name="MenuAP" type="AnimationPlayer" parent="Info"]
anims/show = SubResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_Body_mouse_entered"]
[connection signal="mouse_exited" from="MouseLeaveDetector" to="." method="_on_MouseLeaveDetector_mouse_exited"]
[connection signal="button_down" from="Info/Raid" to="." method="_on_Raid_button_down"]
